force-app/main/default/objects/Order__c/Order__c.object-meta.xml
<CustomObject>
  <label>Order</label>
  <pluralLabel>Orders</pluralLabel>
  <nameField>
    <type>Text</type>
    <label>Order Name</label>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>