force-app/main/default/objects/Order__c/fields/Restaurant__c.field-meta.xml
<CustomField>
    <fullName>Restaurant__c</fullName>
    <label>Restaurant</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Orders</relationshipName>
    <relationshipLabel>Orders</relationshipLabel>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Cuisines__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>true</isOptional>
        <errorMessage>The selected Account should have the Cuisines field populated to be considered a Restaurant.</errorMessage>
    </lookupFilter>
</CustomField>