force-app/main/default/objects/Order__c/validationRules/Status_Transition_Guard.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Transition_Guard</fullName>
    <active>true</active>
    <description>Prevents skipping order lifecycle stages. A Cancelled order cannot be reopened.</description>
    <errorConditionFormula>AND(
    ISCHANGED(Status__c),
    ISPICKVAL(PRIORVALUE(Status__c), "Cancelled"),
    NOT(ISPICKVAL(Status__c, "Cancelled"))
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>A cancelled order cannot be reopened. Please create a new order instead.</errorMessage>
</ValidationRule>