force-app/main/default/objects/Order__c/validationRules/Total_Must_Be_Positive_For_Delivery.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Must_Be_Positive_For_Delivery</fullName>
    <active>true</active>
    <description>Prevents marking an order as Delivered if the total is zero or null.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, "Delivered"),
    OR(ISBLANK(Total__c), Total__c &lt;= 0)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>An order cannot be marked as Delivered when the total is ₹0. Please add items first.</errorMessage>
</ValidationRule>